# CROSS_EXCHANGE_DELTA_NEUTRAL_EXTENDED_PACIFICA_RUST

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  EMERGENCY_EXIT.txt  README.md  config.json  create_archive.py  docker-compose.yml  docker-entrypoint.sh  markets_info.json  requirements.txt
DOC/PACIFICA/: SNIP12_STATUS.md
examples/: btc_order_test.rs  check_balance.rs  check_btc_market.rs  check_cross_spreads.rs  check_positions.rs  check_pump_market.rs  check_spreads.rs  eth_order_test.rs  extended_position_test.rs  fast_opportunities.rs  find_best_opportunities.rs  funding_arbitrage.rs  funding_bot.rs  funding_rates_example.rs  market_order_example.rs  optimized_opportunities.rs  pacifica_check_positions.rs  pacifica_funding_rates.rs  pacifica_market_order_dryrun.rs  pacifica_market_order_test.rs  pacifica_market_order_test_v2.rs  pacifica_order_test_small.rs  pacifica_pump_test.rs  pump_order_test.rs  rest_example.rs  scan_opportunities.rs  set_leverage.rs  sign_order_example.rs  temp_order_test.json  test_field_orderings.rs  test_keccak.rs  test_volume_fetch.rs  test_zec_leverage.rs  websocket_example.rs
scripts/: sign_order.py
src/: bot.rs  error.rs  lib.rs  main.rs  opportunity.rs  rest.rs  signature.rs  trading.rs  types.rs  websocket.rs
src/pacifica/: client.rs  mod.rs  trading.rs  types.rs  ws_trading.rs
