[package]
name = "extended_connector"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
dotenv = "0.15"
chrono = "0.4"
prettytable-rs = "0.10"
colored = "2.0"
# Starknet cryptography for order signing
starknet-crypto = "0.8"
starknet-core = "0.16"
starknet-types-core = "0.2"  # Must match starknet-crypto dependency
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
num-bigint = "0.4"
# Pacifica Ed25519 signing
ed25519-dalek = "2.1"
uuid = { version = "1.11", features = ["v4"] }
bs58 = "0.5"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "test_field_orderings"
path = "test_field_orderings.rs"
